@@ -1,7 +1,7 @@
 chapter Doc
 
 session Classes (doc) in "Classes" = HOL +
-  options [document_variants = "classes"]
+  options [document_variants = "classes", quick_and_dirty]
   theories [document = false] Setup
   theories Classes
   files
