@@ -45,7 +45,7 @@ subsection {* Primitive logic *}
 
 subsubsection {* Core syntax *}
 
-classes type
+setup {* Axclass.axiomatize_class (@{binding type}, []) *}
 default_sort type
 setup {* Object_Logic.add_base_sort @{sort type} *}
 
